--- a/plugins/Blog/plugin.xml
+++ b/plugins/Blog/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <zend-config xmlns:zf="http://framework.zend.com/xml/zend-config-xml/1.0/">
     <plugin>
-        <pluginName>Blog-Plugin</pluginName>
+        <pluginName>Blog</pluginName>
         <pluginDescription>Blog all the posts.</pluginDescription>
         <pluginNiceName>Blog</pluginNiceName>
         <pluginIcon>/plugins/Blog/static/img/icon.png</pluginIcon>
@@ -10,6 +10,7 @@
         <pluginBuildTimestamp></pluginBuildTimestamp>
         <pluginClassName>Blog_Plugin</pluginClassName>
         <pluginIncludePaths>
+            <path>/Blog/controllers</path>
             <path>/Blog/lib</path>
             <path>/Blog/models</path>
         </pluginIncludePaths>
@@ -17,7 +18,12 @@
             <namespace>Blog</namespace>
         </pluginNamespaces>
         <pluginDocumentEditmodeJsPaths>
+            <path>/Blog/static/js/blog/promise.js</path>
+            <path>/Blog/static/js/blog/loader.js</path>
             <path>/Blog/static/js/pimcore/document/tags/blog.js</path>
+            <path>/Blog/static/js/pimcore/document/tags/blog/list.js</path>
+            <path>/Blog/static/js/pimcore/document/tags/blog/settings.js</path>
+            <path>/Blog/static/js/pimcore/document/tags/blog/editor.js</path>
         </pluginDocumentEditmodeJsPaths>
     </plugin>
 </zend-config>
